# libekio

./: .gitignore  Makefile.am  README.md  config.h  config.h.in  config.h.in~  configure.ac
docs/: Makefile
docs/examples/hello-world/: main.c
docs/examples/http/: main.c
docs/examples/sync_async/: main.c
docs/examples/tcp/: main.c
docs/examples/timer/: main.c
include/: libekio.h
src/: Makefile  Makefile.am  libekio.c
src/event_notification/: epoll.c  io_uring.c  kqueue.c
tests/: Makefile.am
